--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "@koa/router": "^10.0.0",
     "discord.js": "^12.5.3",
+    "dotenv": "^8.2.0",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
-    "koa-ratelimit": "^5.0.0"
+    "koa-ratelimit": "^5.0.0",
+    "socket.io": "^4.0.1"
   }
 }
