Updated DC & conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ version: "3"
 
 services:
   loadeksdi_bot:
-    # ...
+    build: .
+    ports:
+      - "3000"
     labels:
       - traefik.enable=true
+      - traefik.http.routers.discord-bridge.entrypoints=websecure
       - traefik.http.routers.discord-bridge.rule=Host(`discord-bridge.loadeksdi.com`)
       - traefik.http.routers.discord-bridge.tls=true
       - traefik.http.routers.discord-bridge.tls.certresolver=loadeksdiCertResolver
