--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-ratelimit": "^5.0.0",
+    "node-fetch": "^2.6.1",
     "socket.io": "^4.0.1"
   }
 }
