--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - web
     expose:
       - "3000"
+    ports:
+      - "3000:3000"
     labels:
       - traefik.enable=true
       - traefik.http.routers.discord-bridge.entrypoints=websecure
